# Image-processing-engine

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  compile_commands.json  engine  filter.cpp  filter.h  image.cpp  imgengine  main  main.cpp  package-lock.json  package.json  pipeline copy.json  pipeline.json  run_test  tailwind.config.js
.github/workflows/: CompileChecking.yml  compile-test-deploy.yml
assets/presets/: cool-green-look.json  dramatic-bnw.json  motion-blur.json  obra-dinn-ish.json  old-school-pc.json  pencil-sketch.json  sobel-dither.json  sobel-pre-smoothed.json
backend/: .env example  .env-example  .gitignore  Dockerfile  docker-compose.prod.yml  docker-compose.yml  env-example  knexfile.js  package-lock.json  package.json  server.js
backend/db/: 01_schema.sql  02_seed.sql
backend/plugins/: db.js
backend/routes/: health-routes.js  preset-routes.js
backend/src/: server.js
frontend/: index.html  main.js  wasm_bridge.cpp
frontend/ui/: create-modal-controller.js  setupJSONPipelineEditor.js
include/: args_parser.h  cli_helpers.h  filter.h  histogram.h  image.h  linear_algebra_operations.h  paths.h  pixel_operations.tpp
out_web/: coi-serviceworker.js  engine.data  engine.js  engine.wasm  engine.worker.js  index.html  main.js  pipeline.json
out_web/PPM-processing/: ppm_class.js
out_web/PPM_processing/: FilesAdministrator.js  PPMImage.js  loadImageToFS.js  paths.js  ppm_class.js
out_web/debug/: debugMEMFSTree.js
out_web/examples/: paisaje.ppm
output/: gato.ppm  gato_processed.ppm  miles_processed.ppm  paisaje.ppm  paisaje_processed.ppm
pics/: gato.ppm
pipelineExamples/: cool-green-look.json  dramatic-bnw.json  motion-blur.json  pencil-sketch.json
src/: main.cpp
tests/: blur.json  identity.json  identity_test.cpp  mirror.json  mirror_test.cpp  sharpen.json  test_utils.cpp  test_utils.h
web/: index.html  main.js  wasm_bridge.cpp
(+121 files in other folders)
